--- a/products.html
+++ b/products.html
@@ -90,7 +90,7 @@
     <body>
         <header>
             <h1>
-                <a href="store.html">STORE</a>
+                <a href="index.html">STORE</a>
             </h1>
         </header>
         <main>
