--- a/index.html
+++ b/index.html
@@ -5,33 +5,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>STORE</title>
         <link href="https://fonts.googleapis.com/css?family=Domine|Questrial" rel="stylesheet">
+        <link rel="stylesheet" href="style.css">
         <style></style>
         <style>
             body{
                 margin: 0;
-            }
-            header{
-                height: 80px;
-                border-bottom: dashed #cccccc 1px;
-            }
-            header h1{
-                text-align: center;
-                font-family: 'Domine', serif;
-                font-size: 24px;
-                letter-spacing: 6px;
-                line-height: 80px;
-                margin: 0;
-            }
-             header h1 a{
-                color: #222;
-                text-decoration: none;
-            }
-            
+            }           
             main{
                 max-width: 960px;
                 margin-left: auto;
                 margin-right: auto;
-                margin-top: 90px;
+                margin-top: 100px;
                 margin-bottom: 90px;
                 font-family: 'Questrial', sans-serif;
                 text-align: center;
@@ -77,14 +61,7 @@
                 background-color: #222;
                 color: #fff;
                 border: 2px solid #222;
-            }
-             footer{
-                background-color: #222;
-                height: 50px;
-                color: #999;
-                text-align: center;
-                line-height: 50px;
-            }     
+            }   
         </style>
     </head>
     <body>
@@ -93,6 +70,16 @@
                 <a href="store.html">STORE</a>
             </h1>
         </header>
+        <nav>
+            <ul class="navbar">
+                <li><a href="#" class="active">home</a></li>
+                <li><a href="#">featured</a></li>
+                <li><a href="#">women</a></li>
+                <li><a href="#">men</a></li>
+                <li><a href="#">kids</a></li>
+                <li><a href="#">more</a></li>
+            </ul>
+        </nav>
         <main>
             <h2>Featured Products</h2>
             <p>Refresh your look with pieces of our collection</p>
