--- a/products.html
+++ b/products.html
@@ -5,26 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>STORE</title>
         <link href="https://fonts.googleapis.com/css?family=Domine|Questrial" rel="stylesheet">
-        <style></style>
+        <link rel="stylesheet" href="style.css">
         <style>
             body{
                 margin: 0;
-            }
-            header{
-                height: 80px;
-                border-bottom: dashed #cccccc 1px;
-            }
-            header h1{
-                text-align: center;
-                font-family: 'Domine', serif;
-                font-size: 24px;
-                letter-spacing: 6px;
-                line-height: 80px;
-                margin: 0;
-            }
-            header h1 a{
-                color: #222;
-                text-decoration: none;
             }
             
             main{
@@ -77,14 +61,7 @@
                 background-color: #222;
                 color: #fff;
                 border: 2px solid #222;
-            }
-             footer{
-                background-color: #222;
-                height: 50px;
-                color: #999;
-                text-align: center;
-                line-height: 50px;
-            }     
+            } 
         </style>
     </head>
     <body>
@@ -93,6 +70,16 @@
                 <a href="index.html">STORE</a>
             </h1>
         </header>
+        <nav>
+            <ul class="navbar">
+                <li><a href="index.html">home</a></li>
+                <li><a href="#">featured</a></li>
+                <li><a href="#">women</a></li>
+                <li><a href="#">men</a></li>
+                <li><a href="#">kids</a></li>
+                <li><a href="#">more</a></li>
+            </ul>
+        </nav>
         <main>
             
             <div>
